// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminGuesser /> renders loading 1`] = `
<Loading
  loadingPrimary="ra.page.loading"
  loadingSecondary="ra.message.loading"
/>
`;

exports[`<AdminGuesser /> renders with custom resources 1`] = `
<AdminUI
  catchAll={[Function]}
  layout={[Function]}
  loading={[Function]}
  loginPage={[Function]}
  logout={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "propTypes": Object {
        "className": [Function],
        "icon": [Function],
        "redirectTo": [Function],
      },
      "render": [Function],
    }
  }
>
  <ResourceGuesser
    name="custom"
  />
</AdminUI>
`;

exports[`<AdminGuesser /> renders without custom resources 1`] = `
<AdminUI
  catchAll={[Function]}
  layout={[Function]}
  loading={[Function]}
  loginPage={[Function]}
  logout={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "propTypes": Object {
        "className": [Function],
        "icon": [Function],
        "redirectTo": [Function],
      },
      "render": [Function],
    }
  }
>
  <ResourceGuesser
    name="books"
  />
</AdminUI>
`;

exports[`<AdminGuesser /> renders without data 1`] = `
<AdminUI
  catchAll={[Function]}
  layout={[Function]}
  loading={[Function]}
  loginPage={[Function]}
  logout={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "propTypes": Object {
        "className": [Function],
        "icon": [Function],
        "redirectTo": [Function],
      },
      "render": [Function],
    }
  }
/>
`;
